change owned to cost free

--- a/landscaper/index.html
+++ b/landscaper/index.html
@@ -41,7 +41,7 @@
 
         <div class="tool-footer">
           <h2>Earn $1/day</h2>
-          <h2>Owned</h2>
+          <h2>Cost Free</h2>
         </div>
       </div>
       <div
